execute python script even if execute flag not set

--- a/ble-data-hub.service
+++ b/ble-data-hub.service
@@ -4,7 +4,7 @@ Wants=bluetooth.target
 After=bluetooth.target
 
 [Service]
-ExecStart=/bin/bash -c "rm -rf /var/lib/bluetooth/*; /home/pi/ble-data-hub/data-hub.py"
+ExecStart=/bin/bash -c "rm -rf /var/lib/bluetooth/*; /usr/bin/env python3 /home/pi/ble-data-hub/data-hub.py"
 
 [Install]
 WantedBy=multi-user.target
